--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -116,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 14,
       "metadata": {
         "id": "P8KOmJkE4VG6"
       },
@@ -139,25 +139,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 9,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 110
-        },
-        "id": "HZecfw1H4VG7",
-        "outputId": "60493c36-29a3-4e96-bc61-e69f1dfc0e8e"
+        "id": "HZecfw1H4VG7"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-22-ee3c599f20f3>, line 11)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-ee3c599f20f3>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    area = [(sample[0]-xmin)*value[0]] +\u001b[0m\n\u001b[0m                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import random\n",
         "\n",
@@ -169,8 +155,7 @@
         "  # Calculate areas of rectangles\n",
         "  # We have to specially calculate the first rectangle,\n",
         "  #   because xmin is not part of our list of samples\n",
-        "  area = [(sample[0]-xmin)*value[0]] +\n",
-        "    [(sample[i]-sample[i-1])*value[i] for i in range(1, len(sample))]\n",
+        "  area = [(sample[0]-xmin)*value[0]] + [(sample[i]-sample[i-1])*value[i] for i in range(1, len(sample))]\n",
         "  # Return sum as an approximate integral\n",
         "  return sum(area)"
       ]
@@ -198,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 12,
       "metadata": {
         "id": "k1E0RPWy4VG8"
       },
@@ -229,7 +214,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "SKJIfCck4VG8"
       },
@@ -309,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "TgFjT97S4VG-"
       },
@@ -396,55 +381,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 99,
       "metadata": {
-        "id": "c6KlEr7K4VG-"
+        "id": "c6KlEr7K4VG-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "06cd2871-55db-45e2-87c9-c3da246a555c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sCalc: 100 ; 0.018885108000176842\n",
+            "pCalc: 100 ; 0.08545244000015373\n"
+          ]
+        }
+      ],
       "source": [
         "#si-exercise\n",
         "import timeit\n",
         "import multiprocessing as mp\n",
-        "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "alpha = np.random.normal(15, 2)\n",
-        "x1 = np.random.normal(3, 5, 1000)\n",
-        "x2 = np.random.normal(10, 1, 1000)\n",
-        "x3 = np.random.normal(8, 8, 1000)\n",
-        "epsilon = np.random.normal(0,1, 1000)\n",
-        "processes = mp.cpu_count()\n",
+        "def create_var(sample_size):\n",
+        "  alpha = np.random.normal(15, 2, sample_size)\n",
+        "  x1 = np.random.normal(3, 5, sample_size)\n",
+        "  x2 = np.random.normal(10, 1, sample_size)\n",
+        "  x3 = np.random.normal(8, 8, sample_size)\n",
+        "  epsilon = np.random.normal(0,1, sample_size)\n",
+        "  return alpha, x1, x2, x3, epsilon\n",
         "\n",
-        "def f(alpha, x1, x2, x3, epsilon):\n",
+        "def f(sample_size):\n",
+        "  alpha, x1, x2, x3, epsilon = create_var(sample_size)\n",
         "  y = alpha + x1 + 2 * x2 + 0.5 * x3 + epsilon\n",
         "  return y\n",
         "\n",
-        "def sCalc(alpha, x1, x2, x3, epsilon, num_iterations):\n",
+        "def sCalc(sample_size, num_iterations):\n",
         "  sResults = []\n",
-        "  sTime = []\n",
         "  for i in range(num_iterations):\n",
-        "      start_time = timeit.default_timer()\n",
-        "      y = f(alpha, x1[i], x2[i], x3[i], epsilon[i])\n",
-        "      end_time = timeit.default_timer()\n",
-        "      sResults.append(np.mean(y))\n",
-        "      sTime.append(end_time - start_time)\n",
-        "  return sResults, sTime\n",
-        "def pCalc(processes, alpha, x1, x2, x3, epsilon, num_iterations):\n",
+        "    y = f(sample_size)\n",
+        "    sResults.append(np.mean(y))\n",
+        "  return sResults\n",
+        "\n",
+        "def pCalc(sample_size, num_iterations):\n",
         "  pResults = []\n",
-        "  pTime = []\n",
+        "  processes = mp.cpu_count()\n",
         "  pool = mp.Pool(processes=processes)\n",
-        "  start_time = timeit.default_timer()\n",
-        "  pResults = [pool.apply_async(f, (alpha, x1, x2, x3, epsilon)) for i in range(num_iterations)]\n",
-        "  pResults = [p.get() for p in pResults]\n",
-        "  end_time = timeit.default_timer()\n",
-        "  pTime.append(end_time - start_time)\n",
-        "  return pResults, pTime\n",
+        "  pResults = [pool.apply_async(f, (sample_size,)) for i in range(num_iterations)]\n",
+        "  pResults = [np.mean(p.get()) for p in pResults]\n",
+        "  return pResults\n",
         "\n",
-        "sResults, sTime = sCalc(alpha, x1, x2, x3, epsilon, 100)\n",
-        "pResults, pTime = pCalc(processes, alpha, x1, x2, x3, epsilon, 100)\n",
+        "sResults = sCalc(1000, 100)\n",
+        "pResults = pCalc(1000, 100)\n",
         "\n",
-        "# print(\"Serial Time:\", np.mean(sTime))\n",
-        "# print(\"Parallel Time:\", np.mean(pTime))"
+        "sTime = []\n",
+        "pTime = []\n",
+        "sTime.append(timeit.Timer('sCalc(1000, 100)',\n",
+        "  'from __main__ import sCalc, f').timeit(number=1))\n",
+        "pTime.append(timeit.Timer('pCalc(1000, 100)',\n",
+        "  'from __main__ import pCalc, f').timeit(number=1))\n"
       ]
     }
   ],
